@@ -4,7 +4,13 @@
 #----------------------------------
 require 'mkmf'
 
-dir_config("win32")
+case RUBY_PLATFORM
+when /cygwin/
+  inc = nil
+  lib = '/usr/lib/w32api'
+end
+
+dir_config("win32", inc, lib)
 
 SRCFILES=<<SRC
 win32ole.c
@@ -19,7 +25,7 @@ end
 def create_win32ole_makefile
   if have_library("ole32") and
      have_library("oleaut32") and
-     have_library("uuid") and
+     have_library("uuid", "&CLSID_CMultiLanguage", "mlang.h") and
      have_library("user32") and
      have_library("kernel32") and
      have_library("advapi32") and
